test/compilable/imports/a313templatemixin1.d
module imports.a313templatemixin1;
void bug()
{
}
