test/fail_compilation/fail7322.d

deprecated void fun() {}

void main()
{
    auto x = &fun;
}
